--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
-<!-- templates/index.html -->
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
-</html>
+<!-- index.html -->
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block header %}{% include "header.html" %}{% endblock %}
+{% block content %}
+    <h1>Welcome to the Home Page</h1>
+    <!-- Page-specific content goes here -->
+{% endblock %}
+{% block footer %}{% include "footer.html" %}{% endblock %}
+
