--- a/templates/controleAcesso/base.html
+++ b/templates/controleAcesso/base.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     {% block header %}{% endblock %}
-    <div id="content">{% block content %}{% endblock %}</div>
+    {% block content %}{% endblock %}
     <div id="footer">{% block footer %}{% endblock %}</div>
 
     <!-- <script defer src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script> -->
