--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
-<!-- index.html -->
-{% extends "base.html" %}
-{% block title %}Home{% endblock %}
-{% block header %}{% include "header.html" %}{% endblock %}
-{% block content %}
-    <!-- Page-specific content goes here -->
-{% endblock %}
-{% block footer %}{% include "footer.html" %}{% endblock %}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+Hellowww
+</body>
+</html>
