--- a/templates/home/carga_questionario.html
+++ b/templates/home/carga_questionario.html
@@ -1,5 +1,6 @@
 {% extends "layouts/base.html" %}
 
+
 {% block title %} Template {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
@@ -10,7 +11,24 @@
   <div class="container-fluid py-4">
     <div class="row min-vh-80 h-100">
       <div class="col-12">
-        NEW CONTENT HERE
+          <form action="{{ url_for('rotas.upload_carga') }}" method="post" enctype="multipart/form-data">
+              <div class="mb-3">
+                  <label for="questionario" class="form-label">Questionário</label>
+                  <select class="form-select" name="questionario">
+                      {% for quest in questionarios %}
+                          <option value="{{ quest.id }}">{{ quest.nome }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="mb-3">
+                  <label for="upload" class="form-label">Upload de Arquivo</label>
+                  <div class="input-group">
+                      <label class="input-group-text" for="upload">Upload</label>
+                      <input type="file" class="form-control" id="upload" name="upload">
+                  </div>
+              </div>
+              <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
       </div>
     </div>
 
