--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -30,7 +30,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/pacientes.html">
+             href="/pacientes">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">person</i>
             </div>
