Mudança no javascript para afastar o espaço entre os pacientes, melhora a usabilidade do usuario

--- a/templates/home/pacientes.html
+++ b/templates/home/pacientes.html
@@ -96,7 +96,7 @@ function createAuthorCell(authorData) {
   const authorName = authorData.nome || 'N/A'; // Handle missing data gracefully
 
   const authorContent = document.createElement('div');
-  authorContent.classList.add('d-flex', 'px-2');
+  authorContent.classList.add('d-flex', 'px-2', 'py-1');
 /*
   const authorImage = document.createElement('img');
   authorImage.classList.add('avatar', 'avatar-sm', 'rounded-circle', 'me-2');
