Adição de informações na tela

--- a/templates/home/paciente.html
+++ b/templates/home/paciente.html
@@ -15,8 +15,8 @@
                         class="w-100 border-radius-lg shadow-sm"></div>
             </div>
             <div class="col-auto my-auto">
-                <div class="h-100"><h5 class="mb-1"> Richard Davis </h5>
-                    <p class="mb-0 font-weight-normal text-sm"> CEO / Co-Founder </p></div>
+                <div class="h-100"><h5 class="mb-1"> Ale Silva </h5>
+                    <p class="mb-0 font-weight-normal text-sm"> Área de tratamento </p></div>
             </div>
             <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
                 <div class="nav-wrapper position-relative end-0">
@@ -49,22 +49,39 @@
                                         class="sr-only">Edit Profile</span> </a></div>
                             </div>
                         </div>
-                        <div class="card-body p-3"><p class="text-sm"> Hi, I’m Alec Thompson, Decisions: If you can’t
-                            decide, the answer is no. If two equally difficult paths, choose the one more painful in the
-                            short term (pain avoidance is creating an illusion of equality). </p>
+                        <div class="card-body p-3"><p class="text-sm"> Ao longo do processo terapêutico,
+                            o paciente Ale da Silva, inicialmente apresentando sintomas de ansiedade,
+                            estresse e depressão leve, demonstrou uma notável evolução em seu estado
+                            emocional. Seu perfil inicial nos testes de DASS-21 revelou pontuações elevadas,
+                            indicando uma carga significativa de sintomas psicológicos. No entanto, à medida
+                            que o tratamento progredia, Ale exibiu uma resposta positiva às intervenções terapêuticas,
+                            evidenciada por uma diminuição consistente nos escores ao longo das sessões. Após completar
+                            o programa de tratamento, Ale experimentou uma redução expressiva nos sintomas de ansiedade,
+                            estresse e depressão, refletindo uma melhoria substancial em sua qualidade de vida
+                            emocional.
+                            Sua resposta favorável ao tratamento reflete não apenas a eficácia das intervenções
+                            clínicas,
+                            mas também sua capacidade de engajamento e disposição para explorar e superar seus desafios
+                            emocionais. </p>
                             <hr class="horizontal gray-light my-4">
                             <ul class="list-group">
                                 <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Nome
-                                    completo</strong> &nbsp; Alec M. Thompson
+                                    completo:</strong> &nbsp; Ale da Silva
                                 </li>
                                 <li class="list-group-item border-0 ps-0 text-sm"><strong
-                                        class="text-dark">Mobile:</strong> &nbsp; (44) 123 1234 123
+                                        class="text-dark">Celular:</strong> &nbsp; (92)8875-5495
                                 </li>
                                 <li class="list-group-item border-0 ps-0 text-sm"><strong
-                                        class="text-dark">Email:</strong> &nbsp; alecthompson@mail.com
+                                        class="text-dark">Idade:</strong> &nbsp; 28 anos
                                 </li>
                                 <li class="list-group-item border-0 ps-0 text-sm"><strong
-                                        class="text-dark">Location:</strong> &nbsp; USA
+                                        class="text-dark">Email:</strong> &nbsp; alecsilva@gmail.com
+                                </li>
+                                <li class="list-group-item border-0 ps-0 text-sm"><strong
+                                        class="text-dark">Último atendimento:</strong> &nbsp; 20/03/2024
+                                </li>
+                                <li class="list-group-item border-0 ps-0 text-sm"><strong
+                                        class="text-dark">Primeira consulta:</strong> &nbsp; 04/06/2022
                                 </li>
                                 <li class="list-group-item border-0 ps-0 pb-0"><strong
                                         class="text-dark text-sm">Social:</strong> &nbsp; <a
@@ -121,6 +138,173 @@
                                         for="flexSwitchCheckDefault3">New launches and projects</label></div>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-12 mt-4">
+                    <div class="mb-5 ps-3"><h6 class="mb-1">Projects</h6>
+                        <p class="text-sm">Architects design houses</p></div>
+                    <div class="row">
+                       <div class="content-list-body row filter-list-1712268482314"><div class="col-12">
+                      <div class="card card-task">
+                        <div class="progress">
+                          <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="card-body">
+                          <div class="card-title">
+                            <a href="#"><h6 data-filter-by="text" class="H6-filter-by-text">Client objective meeting</h6></a>
+                            <span class="text-small">Today</span>
+                          </div>
+                          <div class="card-meta">
+                            <ul class="avatars">
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="Kenny">
+                                  <img alt="Kenny Tran" class="avatar" src="assets/img/avatar-male-6.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="David">
+                                  <img alt="David Whittaker" class="avatar" src="assets/img/avatar-male-4.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="" data-original-title="Sally">
+                                  <img alt="Sally Harper" class="avatar" src="assets/img/avatar-female-3.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="" data-original-title="Kristina">
+                                  <img alt="Kristina Van Der Stroem" class="avatar" src="assets/img/avatar-female-4.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="" data-original-title="Claire">
+                                  <img alt="Claire Connors" class="avatar" src="assets/img/avatar-female-1.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="" data-original-title="Marcus">
+                                  <img alt="Marcus Simmons" class="avatar" src="assets/img/avatar-male-1.jpg">
+                                </a>
+                              </li>
+
+                            </ul>
+                            <div class="d-flex align-items-center">
+                              <i class="material-icons">playlist_add_check</i>
+                              <span>3/4</span>
+                            </div>
+                            <div class="dropdown card-options">
+                              <button class="btn-options" type="button" id="task-dropdown-button-1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="material-icons">more_vert</i>
+                              </button>
+                              <div class="dropdown-menu dropdown-menu-right">
+                                <a class="dropdown-item" href="#">Mark as done</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-danger" href="#">Archive</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div><div class="col-12">
+                      <div class="card card-task">
+                        <div class="progress">
+                          <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="card-body">
+                          <div class="card-title">
+                            <a href="#"><h6 data-filter-by="text" class="H6-filter-by-text">Target market trend analysis</h6></a>
+                            <span class="text-small">5 days</span>
+                          </div>
+                          <div class="card-meta">
+                            <ul class="avatars">
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="Peggy">
+                                  <img alt="Peggy Brown" class="avatar" src="assets/img/avatar-female-2.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="David">
+                                  <img alt="David Whittaker" class="avatar" src="assets/img/avatar-male-4.jpg">
+                                </a>
+                              </li>
+
+                            </ul>
+                            <div class="d-flex align-items-center">
+                              <i class="material-icons">playlist_add_check</i>
+                              <span>2/10</span>
+                            </div>
+                            <div class="dropdown card-options">
+                              <button class="btn-options" type="button" id="task-dropdown-button-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="material-icons">more_vert</i>
+                              </button>
+                              <div class="dropdown-menu dropdown-menu-right">
+                                <a class="dropdown-item" href="#">Mark as done</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-danger" href="#">Archive</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div><div class="col-12">
+                      <div class="card card-task">
+                        <div class="progress">
+                          <div class="progress-bar bg-success" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="card-body">
+                          <div class="card-title">
+                            <a href="#"><h6 data-filter-by="text" class="H6-filter-by-text">Assemble Outcomes Report for client</h6></a>
+                            <span class="text-small">7 days</span>
+                          </div>
+                          <div class="card-meta">
+                            <ul class="avatars">
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="Marcus">
+                                  <img alt="Marcus Simmons" class="avatar" src="assets/img/avatar-male-1.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="Claire">
+                                  <img alt="Claire Connors" class="avatar" src="assets/img/avatar-female-1.jpg">
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="#" data-toggle="tooltip" title="David">
+                                  <img alt="David Whittaker" class="avatar" src="assets/img/avatar-male-4.jpg">
+                                </a>
+                              </li>
+
+                            </ul>
+                            <div class="d-flex align-items-center">
+                              <i class="material-icons">playlist_add_check</i>
+                              <span>0/6</span>
+                            </div>
+                            <div class="dropdown card-options">
+                              <button class="btn-options" type="button" id="task-dropdown-button-3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="material-icons">more_vert</i>
+                              </button>
+                              <div class="dropdown-menu dropdown-menu-right" style="">
+                                <a class="dropdown-item" href="#">Mark as done</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item text-danger" href="#">Archive</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+
                     </div>
                 </div>
             </div>
