--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -34,6 +34,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="/static/assets/css/material-dashboard.css?v=3.0.0" rel="stylesheet" />
+  <link href="/static/css/style.css" rel="stylesheet" />
 
   {% block stylesheets %}{% endblock stylesheets %}
 
