--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -44,16 +44,16 @@
                   <div class="card-body">
                     <form role="form" method="post" action="">
 
-                      {{ form.hidden_tag() }} 
+{#                      {{ form.hidden_tag() }} #}
 
                       <div class="input-group input-group-outline mb-3">
-                        {{ form.username(class="form-control", placeholder="Username") }}
+{#                        {{ form.username(class="form-control", placeholder="Username") }}#}
                       </div>
                       <div class="input-group input-group-outline mb-3">
-                        {{ form.email(class="form-control", type="email", placeholder="Email") }}
+{#                        {{ form.email(class="form-control", type="email", placeholder="Email") }}#}
                       </div>
                       <div class="input-group input-group-outline mb-3">
-                        {{ form.password(class="form-control", type="password", placeholder="Password") }}
+{#                        {{ form.password(class="form-control", type="password", placeholder="Password") }}#}
                       </div>
                       <div class="form-check form-check-info text-start ps-0">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
@@ -70,7 +70,7 @@
                   <div class="card-footer text-center pt-0 px-lg-2 px-1">
                     <p class="mb-2 text-sm mx-auto">
                       Already have an account?
-                      <a href="{{ url_for('authentication_blueprint.login') }}" class="text-primary text-gradient font-weight-bold">Sign IN</a>
+{#                      <a href="{{ url_for('authentication_blueprint.login') }}" class="text-primary text-gradient font-weight-bold">Sign IN</a>#}
                     </p>
                   </div>
 
