--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -37,6 +37,15 @@
             <span class="nav-link-text ms-1">Pacientes</span>
           </a>
         </li>
+      <li class="nav-item">
+          <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}"
+             href="/admin/cadastro">
+              <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                  <i class="material-icons opacity-10">person</i>
+              </div>
+              <span class="nav-link-text ms-1">Cadastro Usuario</span>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link text-white {% if 'billing' in segment %} active bg-gradient-primary {% endif %}"
              href="/admin/uploadCargaQuestionario">
