--- a/templates/home/cadastro_usuario.html
+++ b/templates/home/cadastro_usuario.html
@@ -38,7 +38,9 @@
             {% else %}
 
             <div class="card-body">
-              <form role="form" method="post" action="">
+              <form role="form" method="POST" action="">
+
+                  {{ form.csrf_token }}
 
                 {# {{ form.hidden_tag() }} #}
 
