--- a/templates/home/cadastro_usuario.html
+++ b/templates/home/cadastro_usuario.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Template {% endblock %} 
+{% block title %} Template {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -21,7 +21,7 @@
                 {% if msg %}
                   <span class="text-danger">{{ msg | safe }}</span>
                 {% else %}
-                  Enter your email and password to register
+                  Enter your login and password to register
                 {% endif %}
               </p>
             </div>
@@ -57,9 +57,18 @@
                    {{ form.confirmacao_senha(class="form-control", type="password", placeholder="Confirm Password") }}
                 </div>
                 <div class="text-center">
-                  <button type="submit" name="register"
-                          class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign Up</button>
-                </div>
+                <button type="submit" name="register" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign Up</button>
+                {% for error in form.confirmacao_senha.errors %}
+                    <div class="alert alert-danger">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+                {% for error in form.login.errors %}
+                    <div class="alert alert-danger">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </div>
               </form>
             </div>
             <div class="card-footer text-center pt-0 px-lg-2 px-1">
