--- a/templates/home/paciente.html
+++ b/templates/home/paciente.html
@@ -153,31 +153,67 @@
             <div class="col-12 col-xl-4">
                 <div class="card card-plain h-100">
                     <div class="card-header pb-0 p-3">
-                        <div class="col-md-8 d-flex align-items-center">
-                            <h6 class="mb-0">Resultados recentes</h6>
+                        <div class="col-md-8 d-flex align-items-center"><h6 class="mb-0">Resultados recentes</h6>
                         </div>
                     </div>
                     <div class="card-body p-3">
-                        <div class="timeline timeline-one-side">
-                            {% if recent_results %}
-                                {% for index, result in enumerate(recent_results) %}
-                                    <div class="timeline-block mb-3">
-                        <span class="timeline-step">
-                            <i class="ni ni-active-40 {% if index % 2 == 0 %}text-info{% else %}text-primary{% endif %} text-gradient"></i>
-                        </span>
-                                        <div class="timeline-content">
-                                            <h6 class="text-dark text-sm font-weight-bold mb-0">{{ result.name }}</h6>
-                                            <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ result.date }}</p>
-                                        </div>
-                                    </div>
-                                {% endfor %}
-                            {% else %}
-                                <div class="timeline-block mb-3">
-                                    <div class="timeline-content">
-                                        <h6 class="text-dark text-sm font-weight-bold mb-0">Sem resultados recentes</h6>
-                                    </div>
+                        <div class="timeline timeline-one-side ">
+                            <div class="timeline-block d-flex ps-0 mb-2"><span
+                                    class="timeline-step"> <i
+                                    class="ni ni-active-40 text-info text-gradient"></i> </span>
+                                <div class="timeline-content d-flex flex-column"><h6
+                                        class="text-dark text-sm font-weight-bold mb-0">
+                                    DASS-21</h6>
+                                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">15 MAR 2024</p>
                                 </div>
-                            {% endif %}
+                                <div class="d-flex align-items-center">
+                                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                                            class="fas fa-file-pdf text-lg me-1" aria-hidden="true"></i> PDF
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="timeline-block d-flex ps-0 mb-2"><span
+                                    class="timeline-step"> <i
+                                    class="ni ni-active-40 text-primary text-gradient"></i> </span>
+                                <div class="timeline-content d-flex flex-column"><h6
+                                        class="text-dark text-sm font-weight-bold mb-0">
+                                    BFI-44</h6>
+                                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">21 ABR 2024</p>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                                            class="fas fa-file-pdf text-lg me-1" aria-hidden="true"></i> PDF
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="timeline-block d-flex ps-0 mb-2"><span
+                                    class="timeline-step"> <i
+                                    class="ni ni-active-40 text-info text-gradient"></i> </span>
+                                <div class="timeline-content d-flex flex-column"><h6
+                                        class="text-dark text-sm font-weight-bold mb-0">
+                                    PANAS</h6>
+                                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">04 JAN 2024</p>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                                            class="fas fa-file-pdf text-lg me-1" aria-hidden="true"></i> PDF
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="timeline-block d-flex ps-0 mb-2"><span
+                                    class="timeline-step"> <i
+                                    class="ni ni-active-40 text-primary text-gradient"></i> </span>
+                                <div class="timeline-content d-flex flex-column"><h6
+                                        class="text-dark text-sm font-weight-bold mb-0">
+                                    DSSA-21</h6>
+                                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">19 DEC 2023</p>
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                                            class="fas fa-file-pdf text-lg me-1" aria-hidden="true"></i> PDF
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -373,7 +409,7 @@
                                 <hr class="horizontal dark">
                                 <div class="row">
                                     <div class="col-6">
-                                        <h6 class="text-sm mb-0">5</h6>
+                                        <h6 class="text-sm mb-0">3</h6>
                                         <p class="text-secondary text-sm font-weight-normal mb-0">Testes</p>
                                     </div>
                                     <div class="col-6 text-end">
