--- a/templates/home/paciente.html
+++ b/templates/home/paciente.html
@@ -332,6 +332,7 @@
                 </div>
                 <div class="row mt-lg-4 mt-2">
                     <div class="col-lg-4 col-md-6 mb-4">
+                        <a href="#">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="d-flex mt-n2">
@@ -359,39 +360,43 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
 
                     <div class="col-lg-4 col-md-6 mb-4 mt-2 mt-md-0">
-                        <div class="card">
-                            <div class="card-body p-3">
-                                <div class="d-flex mt-n2">
-                                    <div class="avatar avatar-xl bg-gradient-info border-radius-xl p-2 mt-n4">
-                                        <img src="../../static/img/26631605-prancheta-icone-simbolo-projeto-ilustracao-vetor.jpg"
-                                             alt="atlassian_logo">
-                                    </div>
-                                    <div class="ms-3 my-auto">
-                                        <h6 class="mb-0">PANAS</h6>
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="d-flex mt-n2">
+                                        <div class="avatar avatar-xl bg-gradient-info border-radius-xl p-2 mt-n4">
+                                            <img src="../../static/img/26631605-prancheta-icone-simbolo-projeto-ilustracao-vetor.jpg"
+                                                 alt="atlassian_logo">
+                                        </div>
+                                        <div class="ms-3 my-auto">
+                                            <h6 class="mb-0">PANAS</h6>
+                                        </div>
 
                                     </div>
-
-                                </div>
-
-                                <hr class="horizontal dark">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <h6 class="text-sm mb-0">4</h6>
-                                        <p class="text-secondary text-sm font-weight-normal mb-0">Testes</p>
-                                    </div>
-                                    <div class="col-6 text-end">
-                                        <h6 class="text-sm mb-0">16.01.22</h6>
-                                        <p class="text-secondary text-sm font-weight-normal mb-0">Data último teste</p>
+                                    <hr class="horizontal dark">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <h6 class="text-sm mb-0">4</h6>
+                                            <p class="text-secondary text-sm font-weight-normal mb-0">Testes</p>
+                                        </div>
+                                        <div class="col-6 text-end">
+                                            <h6 class="text-sm mb-0">16.01.22</h6>
+                                            <p class="text-secondary text-sm font-weight-normal mb-0">Data último
+                                                teste</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
+
                     <div class="col-lg-4 col-md-6 mb-4 mt-2">
+                        <a href="#">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="d-flex mt-n2">
@@ -419,6 +424,7 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
 
